# loveletters

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.github/workflows/: default.yml
loveletters_bin/: Cargo.toml
loveletters_bin/src/: lib.rs  main.rs
loveletters_lib/: Cargo.toml
loveletters_lib/src/: bundleing.rs  config.rs  content.rs  discovery.rs  driver_typst.rs  error.rs  frontmatter_parsing.rs  lib.rs  page.rs  seal.rs  section.rs  slug.rs  utils.rs
loveletters_lib/src/rendering/: context.rs  driver_typst.rs  mod.rs
loveletters_testsuite/: Cargo.toml
loveletters_testsuite/src/: lib.rs  mock.rs  util.rs
loveletters_testsuite/tests/: default.rs
loveletters_util/: lib.typ  typst.toml
