[workspace]
resolver = "3"
members = ["loveletters_bin", "loveletters_lib"]

[workspace.package]
authors = ["90degs2infty <90degs2infty@posteo.org>"]
categories = []
documentation = ""
description = "A static site generator powered by typst"
edition = "2024"
homepage = "https://github.com/90degs2infty/loveletters"
keywords = []
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/90degs2infty/loveletters"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = "4.5.51"
const_format = "0.2.35"
loveletters_lib = { path = "./loveletters_lib" }
serde = "1.0.228"
tar = "0.4.44"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
toml = "0.9.8"
typst = "0.14.0"
typst-html = "0.14.0"
typst-kit = "0.14.0"
ureq = "3.1.4"
walkdir = "2.5.0"
zune-inflate = "0.2.54"

[workspace.lints.rust]
missing_docs = { level = "warn", priority = 0 }

[workspace.lints.rustdoc]
missing_crate_level_docs = { level = "warn", priority = 1 }
unescaped_backticks = { level = "warn", priority = 1 }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 2 }
all = { level = "warn", priority = 3 }
pedantic = { level = "warn", priority = 4 }
absolute_paths = { level = "warn", priority = 5 }
# Whitelist some specific lints
# - clippy::module_name_repetitions: I struggle to come up with non-repetitive, meaningful names
module_name_repetitions = { level = "allow", priority = 5 }
