[package]
name = "loveletters_bin"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
walkdir.workspace = true

[lints]
workspace = true

[[bin]]
name = "loveletters"
