[package]
name = "loveletters_bin"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
loveletters_lib.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true

[[bin]]
name = "loveletters"
