[package]
name = "loveletters_lib"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
const_format.workspace = true
serde = { workspace = true, features = ["derive"] }
tar.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde", "parsing"] }
toml.workspace = true
typst.workspace = true
typst-html.workspace = true
typst-kit.workspace = true
ureq.workspace = true
walkdir.workspace = true
zune-inflate.workspace = true

[lints]
workspace = true
