[package]
name = "loveletters_testsuite"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
proptest.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
time = { workspace = true, features = ["serde", "parsing"] }
toml.workspace = true
url.workspace = true

[lints]
workspace = true
